filler text on website

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Github page testi</title>
+  <title>Github page test</title>
 
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
-  <h1>Github pages testi</h1>
+  <h1>Github pages test</h1>
+
+  <p>
+    Welcome to a world where possibilities unfold and curiosity thrives. Explore a realm of knowledge, inspiration, and discovery. Join us on a journey where every click opens doors to new ideas and endless potential. Your adventure begins here.
+  </p>
 </body>
 
 </html>
